// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Header /> rendering should render sticky msg and close it on clicking close-btn 1`] = `
<Fragment>
  <div
    className="unified-header-container"
  >
    <div
      className="unified-top-row"
    >
      <div
        className="unified-logos"
      >
        <Link
          to="/default"
        >
          <img
            alt="openwisp"
            className="unified-logo"
            src="/assets/default/openwisp-logo-black.svg"
          />
        </Link>
      </div>
      <div
        className="unified-controls"
      >
        <div
          className="unified-desktop-langs"
        >
          <button
            className="header-language-btn active "
            key="en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn "
            key="it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
        <div
          aria-label="Menu Button"
          className="unified-hamburger"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
      </div>
    </div>
    <div
      className="unified-nav-row "
    >
      <div
        className="unified-links"
      >
        <a
          className="unified-link button"
          href="link-1/"
          key="link-1/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-1
        </a>
        <a
          className="unified-link button"
          href="link-2/"
          key="link-2/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-2
        </a>
      </div>
      <div
        className="unified-mobile-langs"
      >
        <button
          className="header-language-btn active "
          key="en"
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn "
          key="it"
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
  <div
    className="sticky-container"
    role="banner"
  >
    <div
      className="inner"
    >
      <div
        className="sticky-msg"
        dangerouslySetInnerHTML={
          {
            "__html": <p>
              announcement
            </p>,
          }
        }
      />
      <button
        className="close-sticky-btn"
        onClick={[Function]}
        type="button"
      >
        ✖
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`<Header /> rendering should render with links 1`] = `
<div
  className="unified-header-container"
>
  <div
    className="unified-top-row"
  >
    <div
      className="unified-logos"
    >
      <a
        href="/default"
        onClick={[Function]}
      >
        <img
          alt="openwisp"
          className="unified-logo"
          src="/assets/default/openwisp-logo-black.svg"
        />
      </a>
    </div>
    <div
      className="unified-controls"
    >
      <div
        className="unified-desktop-langs"
      >
        <button
          className="header-language-btn active "
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn "
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
      <div
        aria-label="Menu Button"
        className="unified-hamburger"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className=""
        />
        <div
          className=""
        />
        <div
          className=""
        />
      </div>
    </div>
  </div>
  <div
    className="unified-nav-row "
  >
    <div
      className="unified-links"
    >
      <a
        className="unified-link button"
        href="link-1/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-1
      </a>
      <a
        className="unified-link button"
        href="link-2/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-2
      </a>
    </div>
    <div
      className="unified-mobile-langs"
    >
      <button
        className="header-language-btn active "
        onClick={[Function]}
        type="button"
      >
        english
      </button>
      <button
        className="header-language-btn "
        onClick={[Function]}
        type="button"
      >
        italian
      </button>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering should render without links 1`] = `
<div
  className="unified-header-container"
>
  <div
    className="unified-top-row"
  >
    <div
      className="unified-logos"
    >
      <a
        href="/default"
        onClick={[Function]}
      >
        <img
          alt="openwisp"
          className="unified-logo"
          src="/assets/default/openwisp-logo-black.svg"
        />
      </a>
    </div>
    <div
      className="unified-controls"
    >
      <div
        className="unified-desktop-langs"
      >
        <button
          className="header-language-btn active "
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn "
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
      <div
        aria-label="Menu Button"
        className="unified-hamburger"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className=""
        />
        <div
          className=""
        />
        <div
          className=""
        />
      </div>
    </div>
  </div>
  <div
    className="unified-nav-row "
  >
    <div
      className="unified-links"
    />
    <div
      className="unified-mobile-langs"
    >
      <button
        className="header-language-btn active "
        onClick={[Function]}
        type="button"
      >
        english
      </button>
      <button
        className="header-language-btn "
        onClick={[Function]}
        type="button"
      >
        italian
      </button>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<Fragment>
  <div
    className="unified-header-container"
  >
    <div
      className="unified-top-row"
    >
      <div
        className="unified-logos"
      >
        <Link
          to="/default"
        >
          <img
            alt="openwisp"
            className="unified-logo"
            src="/assets/default/openwisp-logo-black.svg"
          />
        </Link>
      </div>
      <div
        className="unified-controls"
      >
        <div
          className="unified-desktop-langs"
        >
          <button
            className="header-language-btn active "
            key="en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn "
            key="it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
        <div
          aria-label="Menu Button"
          className="unified-hamburger"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
      </div>
    </div>
    <div
      className="unified-nav-row "
    >
      <div
        className="unified-links"
      >
        <a
          className="unified-link button"
          href="/{orgSlug}/login"
          key="/{orgSlug}/login"
          rel="noreferrer noopener"
          target="_blank"
        >
          Sign In
        </a>
        <a
          className="unified-link button"
          href="/{orgSlug}/registration"
          key="/{orgSlug}/registration"
          rel="noreferrer noopener"
          target="_blank"
        >
          Sign Up
        </a>
      </div>
      <div
        className="unified-mobile-langs"
      >
        <button
          className="header-language-btn active "
          key="en"
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn "
          key="it"
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</Fragment>
`;
